2025-03-13 : JVM 정리